kubernetes-config/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: group03
  namespace: group03
  labels:
    app: group03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: group03
  template:
    metadata:
      labels:
        app: group03
    spec:
      containers:
      - name: group03
        image: renyas/yourimagename:latest
        imagePullPolicy: Always
        ports:
        - name: web
          containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: group03
  namespace: group03
spec:
  ports:
    - name: web
      port: 80
      targetPort: 8080
  selector:
    app: group03

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: group03route
  namespace: group03
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`meow.web.dops.tech`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: group03
      port: 80
  tls:
    certResolver: myresolver
